--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "typescript": "^5.6.0",
     "vite": "^7.0.0"
   }
