--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.20",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
+    "@fullcalendar/timegrid": "^6.1.20",
+    "@heroicons/react": "^2.1.0",
+    "axios": "^1.7.0",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.0.0",
-    "@heroicons/react": "^2.1.0",
-    "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "axios": "^1.7.0"
+    "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/leaflet": "^1.9.8",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.3.0",
@@ -31,9 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0",
     "typescript": "^5.6.0",
     "vite": "^7.0.0"
   }
 }
-
